--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <section id="user-goal">
       <h2>My Course Goal</h2>
       <p>{{ courseGoal }}</p>
+      <p>Learn More <a v-bind:href="vueLink">about Vue</a></p>
     </section>
   </body>
 </html>
