outputed the raw HTML content with v-html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <section id="user-goal">
       <h2>My Course Goal</h2>
-      <p>{{ outputGoal() }}</p>
+      <p v-html="outputGoal()"></p>
       <p>Learn More <a v-bind:href="vueLink">about Vue</a></p>
     </section>
   </body>
