--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </header>
     <section id="user-goal">
       <h2>My Course Goal</h2>
-      <p v-html="outputGoal()"></p>
+      <!-- <p v-html="outputGoal()"></p> -->
+      <p>{{ outputGoal() }}</p>
       <p>Learn More <a v-bind:href="vueLink">about Vue</a></p>
     </section>
   </body>
