--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
     <section id="events">
       <h2>Events in Action</h2>
-      <button v-on:click="add">Add</button>
-      <button v-on:click="reduce">Remove</button>
+      <button v-on:click="add(3)">Add 3</button>
+      <button v-on:click="reduce(3)">Substract 3</button>
       <p>Result: {{ counter }}</p>
     </section>
   </body>
