--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <button v-on:click="add(3)">Add 3</button>
       <button v-on:click="reduce(3)">Substract 3</button>
       <p>Result: {{ counter }}</p>
+      <input type="text" v-on:input="setName($event, 'Baraban')">
+      <p>Yor name: {{ name }}</p>
     </section>
   </body>
 </html>
