--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
     <section id="events">
       <h2>Events in Action</h2>
       <button v-on:click="add(3)">Add 3</button>
-      <button v-on:click="reduce(3)">Substract 3</button>
+      <button v-on:click.right="reduce(3)">Substract 3</button>
       <p>Result: {{ counter }}</p>
-      <input type="text" v-on:input="setName($event, 'Baraban')">
-      <p>Yor name: {{ name }}</p>
+      <input 
+        type="text" 
+        v-on:input="setName($event, 'Baraban')" 
+        v-on:keyup.enter="confirmInput()"
+      >
+      <p>Yor name: {{ confirmedName }}</p>
+      <form v-on:submit.prevent="submitForm">
+        <input type="text">
+        <button>Sign Up</button>
+      </form>
     </section>
   </body>
 </html>
