--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h2>Events in Action</h2>
       <button v-on:click="add(3)">Add 3</button>
       <button v-on:click.right="reduce(3)">Substract 3</button>
+      <p v-once>Starting Counter: {{ counter }}</p>
       <p>Result: {{ counter }}</p>
       <input 
         type="text" 
