solved 1)  - Showing an alert (any text of your choice) when the button is pressed

--- a/basics-assignment-2-problem/index.html
+++ b/basics-assignment-2-problem/index.html
@@ -19,7 +19,7 @@
     <section id="assignment">
       <h2>Event Practice</h2>
       <!-- 1) Show an alert (any text of your choice) when the button is pressed -->
-      <button>Show Alert</button>
+      <button v-on:click="pressedButton">Show Alert</button>
       <hr />
       <!-- 2) Register the user input on "keydown" and output it in the paragraph (hint: event.target.value helps) -->
       <input type="text" />
