added two-way binding

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <p>Result: {{ counter }}</p>
       <input 
         type="text" 
-        v-on:input="setName($event, 'Baraban')" 
-        v-on:keyup.enter="confirmInput()"
+        v-model="name"
       >
+      <button v-on:click="resetInput">Reset Input</button>
       <p>Yor name: {{ confirmedName }}</p>
       <form v-on:submit.prevent="submitForm">
         <input type="text">
@@ -31,4 +31,9 @@
       </form>
     </section>
   </body>
+  <!--
+    v-bind:value="name"
+    v-on:input="setName($event, 'Baraban')" 
+    v-on:keyup.enter="confirmInput()"
+  -->
 </html>
