--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
     <section id="events">
       <h2>Events in Action</h2>
-      <button v-on:click="add(3)">Add 3</button>
-      <button v-on:click.right="reduce(3)">Substract 3</button>
+      <button @click="add(3)">Add 3</button>
+      <button @click.right="reduce(3)">Substract 3</button>
       <p v-once>Starting Counter: {{ counter }}</p>
       <p>Result: {{ counter }}</p>
       <input 
@@ -27,9 +27,9 @@
         type="text" 
         v-model="lastname"
       >
-      <button v-on:click="resetInput">Reset Input</button>
+      <button @click="resetInput">Reset Input</button>
       <p>Yor name: {{ fullname }}</p>
-      <form v-on:submit.prevent="submitForm">
+      <form @submit.prevent="submitForm">
         <input type="text">
         <button>Sign Up</button>
       </form>
